--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -4,7 +4,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
@@ -14,8 +13,25 @@
 .modal-content {
   width: 100%;
   max-width: 600px;
+  max-height: 100vh;
+  overflow-y: auto;
   background-color: white;
-  padding: 1rem;
-  border-radius: 0.5rem;
+  padding: 2rem;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal__inner-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+@media (min-width: 576px) {
+  .modal-backdrop {
+    padding: 1rem;
+  }
+
+  .modal-content {
+    border-radius: 0.5rem;
+  }
 }
